--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "dayjs": "^1.11.10",
     "discord.js": "^14.14.1",
     "fs": "^0.0.1-security",
+    "magic-bytes.js": "^1.8.0",
+    "ms": "^2.1.3",
     "path": "^0.12.7"
   }
 }
